--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Odin project caltulator</title>
+</head>
+<body>
+    <div id="calculator-container">
+        <button id="clear">C</button>
+        <button id="divide">(÷)</button>
+    </div>
+</body>
+</html>
