Add more buttons

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div id="calculator-container">
-        <button id="clear">C</button>
-        <button id="divide">(÷)</button>
+        <button id="clear" class="operator">C</button>
+        <button id="add" class="operator">+</button>
+        <button id="subtract" class="operator">-</button>
+        <button id="mulitply" class="operator">×</button>
+        <button id="divide" class="operator">÷</button>
     </div>
 </body>
 </html>
