--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
         <button id="subtract" class="operator">-</button>
         <button id="mulitply" class="operator">×</button>
         <button id="divide" class="operator">÷</button>
+
+        
+        <button id="one" class = "number">1</button>
+        <button id="two" class = "number">2</button>
+        <button id="three" class = "number">3</button>
+        <button id="four" class = "number">4</button>
+        <button id="five" class = "number">5</button>
+        <button id="six" class = "number">6</button>
+        <button id="seven" class = "number">7</button>
+        <button id="eight" class = "number">8</button>
+        <button id="nine" class = "number">9</button>
+        <button id="zero" class = "number">0</button>
     </div>
 </body>
 </html>
