--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="calculator-container">
+        <input type="number" class="textfield"></input>
         <button id="clear" class="operator">C</button>
         <button id="add" class="operator">+</button>
         <button id="subtract" class="operator">-</button>
