Update the grid layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="calculator-container">
         <input type="number" class="textfield"></input>
-        <button id="clear" class="operator">C</button>
+        
         <button id="add" class="operator">+</button>
         <button id="subtract" class="operator">-</button>
         <button id="mulitply" class="operator">×</button>
@@ -27,6 +27,9 @@
         <button id="eight" class = "number">8</button>
         <button id="nine" class = "number">9</button>
         <button id="zero" class = "number">0</button>
+
+        <button id="clear" class="operator">C</button>
+        <button id="equals">=</button>
     </div>
 </body>
 </html>
