Add values to one and two for tests

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <button id="divide" class="operator">÷</button>
 
         
-        <button id="one" class = "number">1</button>
-        <button id="two" class = "number">2</button>
+        <button id="one" value="1" class = "number">1</button>
+        <button id="two" value="2" class = "number">2</button>
         <button id="three" class = "number">3</button>
         <button id="four" class = "number">4</button>
         <button id="five" class = "number">5</button>
