Loads of changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="./scripts/script.js"></script>
     <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="./styles/main.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,24 +10,24 @@
 </head>
 <body>
     <div id="calculator-container">
-        <input type="number" class="textfield"></input>
+        <input type="text" id="textfield"></input>
         
-        <button id="add" class="operator">+</button>
-        <button id="subtract" class="operator">-</button>
-        <button id="mulitply" class="operator">×</button>
-        <button id="divide" class="operator">÷</button>
+        <button id="add" value="+" class="operator">+</button>
+        <button id="subtract" value="-" class="operator">-</button>
+        <button id="mulitply" value="*" class="operator">×</button>
+        <button id="divide" value="÷" class="operator">÷</button>
 
         
         <button id="one" value="1" class = "number">1</button>
         <button id="two" value="2" class = "number">2</button>
-        <button id="three" class = "number">3</button>
-        <button id="four" class = "number">4</button>
-        <button id="five" class = "number">5</button>
-        <button id="six" class = "number">6</button>
-        <button id="seven" class = "number">7</button>
-        <button id="eight" class = "number">8</button>
-        <button id="nine" class = "number">9</button>
-        <button id="zero" class = "number">0</button>
+        <button id="three" value="3" class = "number">3</button>
+        <button id="four" value="4" class = "number">4</button>
+        <button id="five" value="5" class = "number">5</button>
+        <button id="six" value="6" class = "number">6</button>
+        <button id="seven" value="7" class = "number">7</button>
+        <button id="eight" value="8" class = "number">8</button>
+        <button id="nine" value="9" class = "number">9</button>
+        <button id="zero" value="0" class = "number">0</button>
 
         <button id="clear" class="operator">C</button>
         <button id="equals">=</button>
