--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="add" value="+" class="operator">+</button>
         <button id="subtract" value="-" class="operator">-</button>
         <button id="mulitply" value="*" class="operator">×</button>
-        <button id="divide" value="÷" class="operator">÷</button>
+        <button id="divide" value="/" class="operator">÷</button>
 
         
         <button id="one" value="1" class = "number">1</button>
